--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
+        "php": "^8.0"
     },
     "autoload": {
         "psr-4": {
-            "yunusasuroglu\\BulkEmailer\\": "src/"
+            "YunusAsuroglu\\bulk-emailler\\": "src/"
         }
     },
     "extra": {
