--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     },
     "autoload": {
         "psr-4": {
-            "yunusasuroglu\\BulkEmailler\\": "src/"
+            "YunusAsuroglu\\BulkEmailler\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "\yunusasuroglu\\BulkEmailler\\BulkEmailerServiceProvider"
+                "YunusAsuroglu\\BulkEmailler\\BulkEmailerServiceProvider"
             ],
             "aliases": {
                 "BulkEmailer": "YunusAsuroglu\\BulkEmailler\\Facades\\BulkEmailer"
